--- a/article/category.html
+++ b/article/category.html
@@ -30,13 +30,38 @@
           </div>
       </form>
     </script>
+    <script type="text/html" id="edit-form-tpl">
+        <form id="edit-form" class="layui-form" lay-filter="edit-form"   style="margin: 15px 30px 0 0">
+          <!-- 第一行：类别名称 -->
+          <div class="layui-form-item">
+          <label class="layui-form-label">类别名称</label>
+          <div class="layui-input-block">
+              <input type="text" name="name" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+          </div>
+          </div>
+          <!-- 第二行：类别别名 -->
+          <div class="layui-form-item">
+          <label class="layui-form-label">类别别名</label>
+          <div class="layui-input-block">
+              <input type="text" name="alias" required  lay-verify="required" placeholder="请输入别名" autocomplete="off" class="layui-input">
+          </div>
+          </div>
+          <!-- 第三行：按钮 -->
+          <div class="layui-form-item">
+          <div class="layui-input-block">
+              <button class="layui-btn" lay-submit lay-filter="formDemo">确认添加</button>
+              <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+          </div>
+          </div>
+      </form>
+    </script>
     <script type="text/html" id="tpl-article">
       {{each data}}
       <tr>
         <td>{{$value.name}}</td>
         <td>{{$value.alias}}</td>
         <td>
-          <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+          <button data-id='{{$value.Id}}' type="button" class="layui-btn layui-btn-xs edit">编辑</button>
           <button data-id='{{$value.Id}}' type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
         </td>
       </tr>
