--- a/article/category.html
+++ b/article/category.html
@@ -32,6 +32,8 @@
     </script>
     <script type="text/html" id="edit-form-tpl">
         <form id="edit-form" class="layui-form" lay-filter="edit-form"   style="margin: 15px 30px 0 0">
+          <!-- 添加隐藏域 -->
+          <input type="hidden" name="Id">
           <!-- 第一行：类别名称 -->
           <div class="layui-form-item">
           <label class="layui-form-label">类别名称</label>
