实现文章列表搜索功能

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   </a>
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./article/list.html">
                     <i class="layui-icon layui-icon-app"></i>
                     文章列表
                   </a>
