--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   </a>
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./article/addArticle.html">
                     <i class="layui-icon layui-icon-app"></i>
                     发表文章
                   </a>
